# STuffEmu

./: CMakeLists.txt  README.md  TODO.md  hw_defs.h  input.h  main.h  non-thread.c  threaded.c
doc/: DB9 Connector.fzpz  wiring.fzz
src/: helpers.c  helpers.h  hw_defs.c  hw_defs.h  input.c  input.h  main.c  main.h  output.c  output.h
systemd/: stuffemu.path  stuffemu.service
